--- a/src/components/SingleProductInfo/SingleProductInfo.css
+++ b/src/components/SingleProductInfo/SingleProductInfo.css
@@ -1,1 +1,34 @@
+.single-product-view-container {
+    width: 80%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 2rem;
+    align-items: center;
+}
+.product-info {
+    width: 50%;
+    /* min-width: 250px; */
+}
 
+.product-img > img {
+    max-width: 100%;
+    /* min-width: 300px; */
+    height: auto;
+    width: 300px;
+    display: block;
+    border-radius: 10px;
+}
+
+@media (max-width: 790px) {
+    .single-product-view-container {
+        width: 90%;
+        flex-direction: column;
+        gap: 2rem;
+    }
+    .product-info {
+        width: 70%;
+        /* min-width: 250px; */
+    }
+}
