Added theme and changed few styles.

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,8 @@
 .footer-container {
     gap: 5rem;
     flex-wrap: wrap;
+    background-color: rgb(251, 251, 251);
+    margin-top: 100px!important;
 }
 .social-icons {
     gap: 0.7rem;
