--- a/src/components/MainNavbar/MainNavbar.css
+++ b/src/components/MainNavbar/MainNavbar.css
@@ -1,93 +1,12 @@
-.psbr-logo {
-    height: 90px;
-    width: 150px;
-}
-
-.nav-container {
-  max-width: 1100px;
-  margin: 0 auto;
-  padding: 0px 15px;
-  display: flex;
-  justify-content: space-between;
-  width: 80%;
-  align-items: center;
-  height: 100%;
-}
-
 .navbar {
-  position: relative;
+  height: auto;
 }
-
-.menu-icon {
-  display: none;
-}
-
-.nav-elements ul {
-  display: flex;
-  justify-content: space-between;
-  list-style-type: none;
-  margin-bottom: 0;
-  gap: 15px;
-}
-
-.nav-elements ul a {
-  font-size: 16px;
-  font-weight: 400;
-  color: #2f234f;
-  text-decoration: none;
-}
-
-.nav-elements ul a.active {
-  color: #574c4c;
-  font-weight: 500;
-  position: relative;
-}
-
-.nav-elements ul a.active::after {
-  content: "";
-  position: absolute;
-  bottom: -4px;
-  left: 0;
-  width: 100%;
-  height: 2px;
-  background-color: #574c4c;
-}
-
-@media (max-width: 600px) {
-  .menu-icon {
-    display: block;
-    cursor: pointer;
+.nav-link {
+  color: black;
+  &:hover {
+    color: orange;
   }
-
-  .nav-elements {
-    position: absolute;
-    right: 0;
-    top: 140px;
-    margin: 0 auto;
-    background-color: white;
-    width: 0px;
-    height: calc(40vh - 60px);
-    transition: all 0.3s ease-in;
-    overflow: hidden;
+  &.active {
+    color: orange;
   }
-
-  .nav-elements.active {
-    width: 270px;
-    z-index: 100;
-  }
-
-  .nav-elements ul {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    align-items: center;
-    justify-content: center;
-  }
-
-  .nav-elements ul li {
-    margin-right: unset;
-    margin-top: 22px;
-  }
-   
 }
-
