--- a/src/components/SingleProductInfo/SingleProductInfo.css
+++ b/src/components/SingleProductInfo/SingleProductInfo.css
@@ -12,6 +12,15 @@
     /* min-width: 250px; */
 }
 
+.product-img {
+    box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+    border-radius: 15px;
+    transition: transform 0.3s ease-in-out;
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+    }
+}
 .product-img > img {
     max-width: 100%;
     /* min-width: 300px; */
