--- a/src/index.css
+++ b/src/index.css
@@ -6,27 +6,35 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  a {
-    text-decoration: none;
-    color: black;
-    cursor: pointer;
+  font-size: 20px;
+  background-color: rgb(15, 112, 172);
+  /* color: black; */
 
-    &:hover {
-      color: brown;
-    }
-  }
-  .font-4rem {
-    font-size: 4rem;
-  }
+  
 
 }
 
-/* .psbr-logo {
-  height: 100px;
-  width: 160px;
-} */
+.psbr-logo {
+  height: auto;
+  max-width: 160px;
+}
+
+.orange-text {
+  color: orange;
+  font-size: 50px;
+  font-weight: 600;
+}
+p {
+  color: white;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+  &:hover {
+    color: orange;
+  }
+}
