--- a/src/index.css
+++ b/src/index.css
@@ -10,11 +10,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 20px;
-  background-color: rgb(15, 112, 172);
+  background-color: #004A8D;
   /* color: black; */
-
-  
-
 }
 
 .psbr-logo {
