--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,18 +1,26 @@
 .banner-container {
     width: 100%;
     height: 85vh;
-    background-image: url('../../assets/truck.jpeg');
+    background-image: url('../../assets/ship.jpg');
     background-size: cover;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
+    gap: 0.4rem;
     padding: 1rem;
     color: white;
     z-index: 1000;
+    padding-right: 350px;
     
 }
 
 .banner-header {
-    font-size: 5rem;
+    font-size: 3.5rem;
+}
+
+
+@media (max-width: 762px) {
+    .banner-container {
+        padding-right: 0;
+    }
 }
