--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,8 @@
 .footer-container {
     gap: 5rem;
     flex-wrap: wrap;
-    background-color: rgb(251, 251, 251);
-    margin-top: 100px!important;
+    background: rgb(2,0,36);
+    background: linear-gradient(273deg, rgba(2,0,36,1) 0%, rgba(207,207,207,1) 0%, rgba(231,231,231,1) 100%);
 }
 .social-icons {
     gap: 0.7rem;
