--- a/src/pages/ProductsPage/ProductsPage.css
+++ b/src/pages/ProductsPage/ProductsPage.css
@@ -1,9 +1,11 @@
+
+
 .products-banner {
     background: url("../../assets/spices_common.jpg");
     filter: blur(0.5px);
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     background-size: cover;
-    /* object-fit: contain; */
+    background-position: right;
     background-repeat: no-repeat;
 }
