--- a/src/components/SingleProductInfo/SingleProductInfo.css
+++ b/src/components/SingleProductInfo/SingleProductInfo.css
@@ -4,12 +4,15 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    gap: 2rem;
+    gap: 1.5rem;
     align-items: center;
 }
 .product-info {
     width: 50%;
     /* min-width: 250px; */
+    p {
+        color: #626262;
+    }
 }
 
 .product-img {
