--- a/src/components/MainNavbar/MainNavbar.css
+++ b/src/components/MainNavbar/MainNavbar.css
@@ -1,5 +1,7 @@
 .navbar {
   height: auto;
+  display: flex;
+  justify-content: center;
 }
 .nav-link {
   color: black;
@@ -12,10 +14,20 @@
   }
 
 }
+/* .container-fluid {
+  width: 85%;
+} */
+.navbar-collapse {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
 .navbar-nav {
+  align-items: center;
+  justify-content: center;
   gap: 1rem;
 }
-.container-fluid {
+/* .container-fluid {
   width: 60%;
 }
 
@@ -51,4 +63,5 @@
   .container-fluid {
     width: 100%;
   }
-}
+} */
+
