--- a/src/components/MainNavbar/MainNavbar.css
+++ b/src/components/MainNavbar/MainNavbar.css
@@ -21,12 +21,20 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.3s ease-in-out;
+}
+.navbar-collapse.show {
+  max-height: 500px; /* Adjust the maximum height as needed */
 }
 .navbar-nav {
   align-items: center;
   justify-content: center;
   gap: 1rem;
 }
+
+
 /* .container-fluid {
   width: 60%;
 }
