--- a/src/components/SingleProductInfo/SingleProductInfo.css
+++ b/src/components/SingleProductInfo/SingleProductInfo.css
@@ -40,7 +40,10 @@
         gap: 2rem;
     }
     .product-info {
-        width: 70%;
+        width: 75%;
         /* min-width: 250px; */
+    }
+    .product-img > img {
+        width: 300px;
     }
 }
