--- a/src/pages/ContactUsPage/ContactUsPage.css
+++ b/src/pages/ContactUsPage/ContactUsPage.css
@@ -1,10 +1,12 @@
 .contact-us-banner {
-    background: url("../../assets/contact-us.jpg");
+    background: url("../../assets/contact.jpeg");
     filter: blur(0.5px);
     width: 100%;
     height: 60vh;
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: top;
+    clip:inherit
 }
 .contact-us-cards {
     justify-content: center;
@@ -42,4 +44,10 @@
     height: 70vh;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+
+@media (max-width: 762px) {
+    .contact-us-banner {
+        /* background-position: bottom; */
+    }
 }
