--- a/src/components/MainNavbar/MainNavbar.css
+++ b/src/components/MainNavbar/MainNavbar.css
@@ -1,10 +1,21 @@
+
+
 .navbar {
   height: auto;
   display: flex;
   justify-content: center;
+  transition: transform 0.3s ease-in-out, height 0.3s ease-in-out;
+  overflow: hidden;
+  /* height: 150px; */
+  /* background-color: transparent; */
 }
+.hidden {
+  transform: translateY(-100%);
+  transition: transform 0.3s ease-in-out;
+}
+
 .nav-link {
-  color: black;
+  color: white;
   width: auto;
   &:hover {
     color: orange;
@@ -59,10 +70,14 @@
   }
   
 }
+*/
 
 @media (max-width: 856px) {
-  .container-fluid {
-    width: 100%;
+  .nav-link {
+    color: black;
   }
-} */
+  ul {
+    padding: 20px;
+  }
+} 
 
