--- a/src/components/SingleProductInfo/SingleProductInfo.css
+++ b/src/components/SingleProductInfo/SingleProductInfo.css
@@ -14,14 +14,17 @@
         color: #626262;
     }
 }
-
+.product-img-container {
+    border-radius: 25px;
+}
 .product-img {
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
     border-radius: 15px;
     transition: transform 0.3s ease-in-out;
     &:hover {
         cursor: pointer;
-        transform: scale(1.1);
+        transform: scale(1.05);
+
     }
 }
 .product-img > img {
@@ -30,7 +33,7 @@
     height: auto;
     width: 400px;
     display: block;
-    border-radius: 10px;
+    border-radius: 15px;
 }
 
 @media (max-width: 790px) {
