--- a/src/pages/AboutUsPage/AboutUsPage.css
+++ b/src/pages/AboutUsPage/AboutUsPage.css
@@ -2,11 +2,20 @@
     background: url("../../assets/about-us-ship.jpg");
     filter: blur(0.5px);
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     background-size: cover;
     background-position: right;
     background-repeat: no-repeat;
 }
+.about-us-banner::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(61, 61, 61, 0.5); /* Adjust the color and opacity as needed */
+  }
 
 .mv-container {
     flex-wrap: wrap;
