--- a/src/pages/ContactUsPage/ContactUsPage.css
+++ b/src/pages/ContactUsPage/ContactUsPage.css
@@ -2,12 +2,21 @@
     background: url("../../assets/contact.jpeg");
     filter: blur(0.5px);
     width: 100%;
-    height: 60vh;
+    height: 100vh;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: top;
     clip:inherit
 }
+.contact-us-banner::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(61, 61, 61, 0.5); /* Adjust the color and opacity as needed */
+  }
 .contact-us-cards {
     justify-content: center;
     flex-wrap: wrap;
