--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -1,21 +1,35 @@
 .product-card {
-    height: 300px;
+    height: 450px;
     width: 350px;
     cursor: pointer;
-    
-}
-
-.product-card > img {
-    max-width: 100%;
-    height: 100%;
-    width: 340px;
-    display: block;
-    object-fit: cover;
+    background-color: rgb(226, 226, 226);
     border-radius: 10px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     transition: transform 0.3s ease-in-out;
     &:hover {
         cursor: pointer;
         transform: scale(1.03);
+        box-shadow: rgba(224, 20, 20, 0.4) 0px 0px 0px 2px, rgba(167, 37, 17, 0.65) 0px 4px 6px -1px, rgba(206, 10, 10, 0.08) 0px 3px 0px inset;
+    }
+}
+.product-card-text {
+    &:hover {
+        color: black;
+    }
+}
+.product-card > img {
+    max-width: 100%;
+    height: 300px;
+    width: 350px;
+    display: block;
+    object-fit: cover;
+    /* border-radius: 10px; */
+    border-top-left-radius: 10px; /* Adjust the radius as needed */
+    border-top-right-radius: 10px; /* Adjust the radius as needed */
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+    transition: transform 0.3s ease-in-out;
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.01);
     }
 }
