--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,6 +1,6 @@
 .banner-container {
     width: 100%;
-    height: 85vh;
+    height: 100vh;
     background-image: url('../../assets/ship.jpg');
     background-size: cover;
     display: flex;
@@ -12,7 +12,15 @@
     z-index: 1000;
     padding-right: 350px;
 }
-
+.banner-container::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.207); /* Adjust the color and opacity as needed */
+  }
 
 .banner-header {
     font-size: 3.5rem;
