--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -2,14 +2,16 @@
     height: 450px;
     width: 350px;
     cursor: pointer;
-    background-color: rgb(226, 226, 226);
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    /* box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px; */
+    box-shadow: rgba(242, 0, 0, 0.776) 0px 5px, rgba(255, 89, 0, 0.508) 0px 10px;
     transition: transform 0.3s ease-in-out;
     &:hover {
+        box-shadow:  rgb(255, 94, 0) 0px 10px;
         cursor: pointer;
-        transform: scale(1.03);
-        box-shadow: rgba(224, 20, 20, 0.4) 0px 0px 0px 2px, rgba(167, 37, 17, 0.65) 0px 4px 6px -1px, rgba(206, 10, 10, 0.08) 0px 3px 0px inset;
+        /* box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px; */
+        transition: transform 0.3s ease-in-out;
     }
 }
 .product-card-text {
@@ -31,5 +33,14 @@
     &:hover {
         cursor: pointer;
         transform: scale(1.01);
+        transition: transform 0.3s ease-in-out;
     }
+}
+
+.product-card-text {
+    &:hover {
+        transform: scale(1.02);
+        transition: transform 0.3s ease-in-out;
+    }
+
 }
