--- a/src/components/SingleProductInfo/SingleProductInfo.css
+++ b/src/components/SingleProductInfo/SingleProductInfo.css
@@ -30,7 +30,7 @@
 .product-img > img {
     max-width: 100%;
     /* min-width: 300px; */
-    height: auto;
+    height: 600px;
     width: 400px;
     display: block;
     border-radius: 15px;
@@ -38,7 +38,7 @@
 
 @media (max-width: 790px) {
     .single-product-view-container {
-        width: 90%;
+        width: 100%;
         flex-direction: column;
         gap: 2rem;
     }
