--- a/src/pages/AboutUsPage/AboutUsPage.css
+++ b/src/pages/AboutUsPage/AboutUsPage.css
@@ -19,7 +19,8 @@
 
 .mv-container {
     flex-wrap: wrap;
-    justify-content: space-evenly;
+    justify-content: center;
+    gap: 3rem;
 }
 
 .mv-content {
