--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -11,6 +11,9 @@
     color: white;
     z-index: 1000;
     padding-right: 350px;
+    background-size: 110% 110%;
+  background-position: center center;
+  animation: shrink 5s infinite alternate;
 }
 .banner-container::before {
     content: "";
@@ -19,13 +22,21 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.207); /* Adjust the color and opacity as needed */
+    background: rgba(0, 0, 0, 0.207); 
   }
 
 .banner-header {
     font-size: 3.5rem;
 }
 
+@keyframes shrink {
+    0% {
+      background-size: 110% 110%;
+    }
+    100% {
+      background-size: 100% 100%;
+    }
+  }
 
 @media (max-width: 762px) {
     .banner-container {
