--- a/src/App.css
+++ b/src/App.css
@@ -3,8 +3,24 @@
 }
 
 .whatsApp > a > img {
-    height: 85px;
-    width: 85px;
+    height: 75px;
+    width: 75px;
+}
+
+.whatsApp {
+    position: fixed;
+    bottom: 1rem; /* Adjust as needed */
+    right: 1rem; /* Adjust as needed */
+    animation: bounce 0.5s infinite alternate;
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateY(0);
+    }
+    100% {
+        transform: translateY(-10px); /* Adjust the bounce height as needed */
+    }
 }
 
 
