--- a/src/pages/ContactUsPage/ContactUsPage.css
+++ b/src/pages/ContactUsPage/ContactUsPage.css
@@ -57,6 +57,6 @@
 
 @media (max-width: 762px) {
     .contact-us-banner {
-        /* background-position: bottom; */
+        height: 60vh;
     }
 }
