--- a/src/components/MainNavbar/MainNavbar.css
+++ b/src/components/MainNavbar/MainNavbar.css
@@ -37,10 +37,13 @@
 .navbar-nav {
   align-items: center;
   justify-content: center;
-  gap: 0.3rem;
+  gap: 1rem;
 }
 
-
+.divider-line {
+  display: none;
+  
+}
 
 @media (max-width: 856px) {
   .nav-link {
@@ -48,6 +51,10 @@
   }
   li {
     padding: 5px;
+  }
+  .navbar-nav {
+
+    gap: 0.3rem;
   }
 } 
 
